src/use_cases/service_mesh/bookinfo/config/virtual-service-reviews-80-20.yaml
# yamllint disable rule:hyphens rule:commas rule:indentation rule:line-length
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 80
    - destination:
        host: reviews
        subset: v2
      weight: 20
